# wom-rpg

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: cli.rs  commands.rs  main.rs  parser.rs  template.rs
templates/: default.yaml
