[package]
name = "wom-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wom-rpg"
path = "src/cli.rs"

[dependencies]
indoc = "2.0.1"
llm-chain = "0.9.0"
llm-chain-openai = "0.9.0"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
termimad = "0.23.0"
tokio = { version = "1.28.0", features = ["rt"] }
